syntax = "proto3";

option java_multiple_files = true;
option java_package = "election";
option java_outer_classname = "ElectionServiceProto";

service ElectionService {
  rpc Election (ElectionRequest) returns (ElectionResponse);
  rpc CoordinatorAnnouncement (CoordinatorAnnouncementRequest) returns (CoordinatorAnnouncementResponse);
}

message ElectionRequest {
  int32 senderId = 1;
}

message ElectionResponse {
  bool alive = 1;
}

message CoordinatorAnnouncementRequest {
  int32 coordinatorId = 1;
}

message CoordinatorAnnouncementResponse {
  bool acknowledged = 1;
}
